--- a/lb-frontend/src/index.css
+++ b/lb-frontend/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.blur {
+    filter: blur(4px); /* Cambia el valor para ajustar el nivel de desenfoque */
+    transition: filter 0.3s ease;
+}
